--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo": "^27.0.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-vector-icons": "^5.0.0",
     "vue-native-core": "0.0.8",
     "vue-native-helper": "0.0.9",
     "vue-native-router": "0.0.1-alpha.3",
