--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue-native-core": "0.0.8",
     "vue-native-helper": "0.0.9",
     "vue-native-router": "0.0.1-alpha.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-cache": "^3.0.0"
   }
 }
